--- a/site/_sass/_variables.sass
+++ b/site/_sass/_variables.sass
@@ -5,6 +5,7 @@ $base-margin: 1rem
 $navbar-height: 5rem
 $docs-container-vertical-margin: 3 * $base-margin
 $docs-title-margin: 0 * $base-margin
+$em-right-margin: 0.2rem
 
 // Bulma variables
 $tan: #c88e56
