--- a/site/_includes/config.html
+++ b/site/_includes/config.html
@@ -1,4 +1,9 @@
 {% assign configs = site.data.config[include.id] %}
+{% for group in configs.groups %}
+<h2 id="{{ group.name | slugify }}">{{ group.name }}</h2>
+
+{% if group.description %}{{ group.description | markdownify }}{% endif %}
+
 <table>
   <thead>
     <tr>
@@ -8,12 +13,13 @@
     </tr>
   </thead>
   <tbody>
-    {% for config in configs %}
+    {% for param in group.params %}
     <tr id="{{ config.param }}">
-      <td><code>{{ config.param }}</code></td>
-      <td>{{ config.description | markdownify }}</td>
-      <td>{% if config.default %}<code>{{ config.default }}</code>{% endif %}</td>
+      <td><code>{{ param.param }}</code></td>
+      <td>{{ param.description | markdownify }}</td>
+      <td>{% if param.default %}<code>{{ param.default }}</code>{% endif %}</td>
     </tr>
-    {% endfor %}
+    {% endfor %} <!-- for param in group.params -->
   </tbody>
 </table>
+{% endfor %} <!-- for group in configs.groups -->
