fix baseurl issue for GH pages

--- a/site/_includes/head.html
+++ b/site/_includes/head.html
@@ -4,10 +4,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="/css/normalize.css">
-<link rel="stylesheet" href="/css/tippy.css">
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="{{ site.baseurl }}css/normalize.css">
+<link rel="stylesheet" href="{{ site.baseurl }}css/tippy.css">
+<link rel="stylesheet" href="{{ site.baseurl }}css/style.css">
 
-<link rel="shortcut icon" href="/img/favicon.ico">
+<link rel="shortcut icon" href="{{ site.baseurl }}img/favicon.ico">
 
-<script src="js/tippy.min.js"></script>
+<script src="{{ site.baseurl }}js/tippy.min.js"></script>
