--- a/site/_includes/sidebar.html
+++ b/site/_includes/sidebar.html
@@ -5,8 +5,8 @@
   </p>
   <ul class="menu-list">
     {% for doc in docs %}
-    {% capture doc_url %}/docs/{{ group.dir }}/{{ doc.endpoint }}/{% endcapture %}
-    <li><a{% if doc_url == page.url %} class="is-active"{% endif %} href="/docs/{{ group.dir }}/{{ doc.endpoint }}">{{ doc.name }}</a></li>
+    {% capture doc_url %}{{ site.baseurl }}docs/{{ group.dir }}/{{ doc.endpoint }}/{% endcapture %}
+    <li><a{% if doc_url == page.url %} class="is-active"{% endif %} href="{{ site.baseurl }}docs/{{ group.dir }}/{{ doc.endpoint }}">{{ doc.name }}</a></li>
     {% endfor %}
   </ul>
   {% endfor %}
