fix more base URL issues

--- a/site/_includes/download-button.html
+++ b/site/_includes/download-button.html
@@ -1,4 +1,4 @@
-<a class="button is-primary" href="/docs/getting-started" download>
+<a class="button is-primary" href="{{ site.baseurl }}docs/getting-started" download>
   <span class="icon">
     <i class="fa fa-download"></i>
   </span>
