--- a/site/_includes/javadoc-button.html
+++ b/site/_includes/javadoc-button.html
@@ -1,6 +1,6 @@
 <a class="button is-large" href="/api">
   <span class="icon">
-    <img src="/img/java-icon.svg">
+    <img src="{{ site.baseurl }}img/java-icon.svg">
   </span>
   <span>
     Javadoc
