--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -51,6 +51,7 @@ $docs-side-padding: 4rem
 .toc
   $toc-base-font-size: 1.2rem
   position: fixed
+  max-width: 12rem
 
   .section-nav
     .toc-entry
