add initial material to DC/OS doc

--- a/site/_includes/javadoc-button.html
+++ b/site/_includes/javadoc-button.html
@@ -1,4 +1,4 @@
-<a class="button is-large" href="{{ site.baseurl }}api">
+<a class="button is-large" href="{{ site.baseurl }}javadoc">
   <span class="icon">
     <img src="{{ site.baseurl }}img/java-icon.svg">
   </span>
