--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -10,6 +10,9 @@ $fa-font-path: "../fonts"
 @import typography
 @import vendor/bulma/bulma
 
+img.logo
+  height: 3rem
+
 .highlighter-rouge
   & + blockquote, & + h5, & + p
     margin-top: 1.5rem
@@ -79,6 +82,9 @@ body
 .bk-docs-container
   margin-top: $docs-container-vertical-margin
   margin-bottom: $docs-container-vertical-margin * 2
+
+  hr
+    height: 2px
 
   .bk-docs-block
     padding: 0 $docs-side-padding
