--- a/site/_sass/_syntax.sass
+++ b/site/_sass/_syntax.sass
@@ -2,7 +2,7 @@
   // Language-specific overrides
   &.language-shell, &.language-bash
     .highlight
-      .nb, .o
+      .nb, .o, .k
         // This prevents keywords like cd and help from being highlighted
         color: $sx-light-gray
 
