fix baseurls for images

--- a/site/_layouts/docs.html
+++ b/site/_layouts/docs.html
@@ -19,7 +19,7 @@ layout: default
           {% if page.logo %}
           <div class="level-right">
             <div class="level-item">
-              <img class="logo" src="{{ page.logo }}">
+              <img class="logo" src="{{ site.baseurl }}{{ page.logo }}">
             </div>
           </div>
           {% endif %}
