--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -1,7 +1,7 @@
 <nav class="nav has-shadow bk-navbar">
   <div class="container">
     <div class="nav-left bk-brand">
-      <a class="nav-item" href="/">
+      <a class="nav-item" href="{{ site.baseurl }}">
         <img src="{{ site.baseurl }}img/bk-logo.png" alt="Apache BookKeeper">
         <h3>Apache BookKeeper</h3>
       </a>
