increase left-hand padding for docs container

--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -45,7 +45,7 @@ span.pop
 +sticky-footer
 
 $base-font-size: 1rem
-$docs-side-padding: 4rem
+$docs-side-padding: 6rem
 
 // Popovers
 .popover-template
@@ -80,6 +80,7 @@ body
   font-size: 1.25em
 
 .bk-docs-container
+  width: 95%
   margin-top: $docs-container-vertical-margin
   margin-bottom: $docs-container-vertical-margin * 2
 
