--- a/site/_sass/_docs.sass
+++ b/site/_sass/_docs.sass
@@ -1,4 +1,5 @@
 .bk-docs-container
+  min-height: 1800px
   margin-top: $docs-container-vertical-margin
   margin-bottom: $docs-container-vertical-margin * 2
 
