--- a/site/_includes/sidebar.html
+++ b/site/_includes/sidebar.html
@@ -1,3 +1,22 @@
+<aside class="sidebar">
+  {% for group in site.data.sidebar.groups %}{% assign docs = group.docs %}
+  <p>
+    {{ group.name }}
+  </p>
+  <ul class="sidebar-items">
+    {% for doc in docs %}
+    {% capture doc_url %}{{ site.baseurl }}docs/{{ group.dir }}/{{ doc.endpoint }}/{% endcapture %}
+    <li{% if doc_url == page.url %} class="active"{% endif %}>
+      <a href="{{ site.baseurl }}docs/{{ group.dir }}/{{ doc.endpoint }}">
+      {{ doc.name }}
+      </a>
+    </li>
+    {% endfor %}
+  </ul>
+  {% endfor %}
+</aside>
+
+<!--
 <aside class="menu">
   {% for group in site.data.sidebar.groups %}{% assign docs = group.docs %}
   <p class="menu-label">
@@ -15,3 +34,4 @@
   </ul>
   {% endfor %}
 </aside>
+-->
