--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -16,8 +16,12 @@ footer.footer
 img.logo
   height: 3rem
 
+blockquote
+  code
+    background-color: lighten($sx-light-gray, 30%)
+
 .highlighter-rouge
-  & + blockquote, & + h5, & + p
+  & + blockquote, & + h1, & + h2, & + h3, & + h4, & + h5, & + p
     margin-top: 1.5rem
 
 em
