--- a/site/_includes/footer.html
+++ b/site/_includes/footer.html
@@ -2,15 +2,7 @@
   <div class="container">
     <div class="content has-text-centered">
       <p>
-        <strong>{{ site.title }}</strong> is an Apache project.
-      </p>
-      <p>
-        <a class="icon" href="{{ site.github_repo }}">
-          <i class="fa fa-github"></i>
-        </a>
-        <a class="icon" href="https://stackoverflow.com/search?q=apache+bookkeeper">
-          <i class="fa fa-stack-overflow"></i>
-        </a>
+        Copyright &copy; 2016 - {{ 'now' | date: '%Y' }} <a href="https://www.apache.org/">The Apache Software Foundation</a>,<br /> licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, version 2.0</a>.
       </p>
     </div>
   </div>
