fix sidebar scrolling issue

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -7213,6 +7213,9 @@ footer.footer {
 img.logo {
   height: 3rem; }
 
+img.navbar-logo {
+  margin-right: 0.25rem; }
+
 blockquote code {
   background-color: white; }
 
