--- a/site/_sass/_navbar.sass
+++ b/site/_sass/_navbar.sass
@@ -1,18 +1,7 @@
-nav.bk-navbar
-  //+sticky-navbar
-  height: $navbar-height
+$navbar-horizontal-padding: 2rem
 
-  .container
-    width: 90%
+section.bk-topnav
+  padding: 0 $navbar-horizontal-padding
 
-    a
-      font-size: 1.5rem
-
-    .bk-brand
-      h3
-        margin-left: 1rem
-        font-size: 2rem
-
-    .nav-right
-      .nav-item + .nav-item
-        margin-left: $base-margin * 2
+  nav.bk-navbar
+    
