small fix for nested lists

--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -118,6 +118,9 @@ h2.bk-subtitle
   .bk-docs-content
     min-height: 100vh
 
+    ol ol, ol ul
+      margin: .5rem 0 .5rem .75rem
+
     ul, li, ol
       margin-left: .75rem
     
