update bulma CSS version

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -44,7 +44,7 @@
               </a>
             </p>
             <p class="control">
-              <a class="button is-primary" href="{{ site.baseurl }}docs/getting-started/installation">
+              <a class="button is-primary" href="{{ site.baseurl }}docs/getting-started/installation#download">
                 <span class="icon">
                   <i class="fa fa-download"></i>
                 </span>
