--- a/site/css/style.sass
+++ b/site/css/style.sass
@@ -11,6 +11,10 @@ $fa-font-path: "../fonts"
 @import typography
 @import vendor/bulma/bulma
 
+.navbar-brand a
+  font-size: 120%
+  margin-right: 2rem
+
 img.logo
   height: 3rem
 
@@ -153,6 +157,3 @@ aside.sidebar
 
         a
           color: white
-
-nav.navbar
-  position: sticky
