better CSS for front-page buttons

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -2,7 +2,7 @@
 <div class="bk-topnav container">
   <nav class="navbar is-transparent">
     <div class="navbar-brand">
-      <a class="navbar-item">
+      <a class="navbar-item" href="{{ site.baseurl }}">
         <img class="navbar-logo" src="{{ site.baseurl }}img/bk-logo.png"> {{ site.title }}
       </a>
     </div>
