add more pages to /community and add baseline version of manual deployment doc

--- a/site/_includes/navbar.html
+++ b/site/_includes/navbar.html
@@ -8,12 +8,7 @@
     </div>
     <div class="navbar-menu">
       <div class="navbar-start">
-        <div class="navbar-item has-dropdown is-hoverable">
-          <a class="navbar-link" href="{{ site.baseurl }}docs">Documentation</a>
-          <div class="navbar-dropdown is-boxed">
-            <a class="navbar-item">Foo</a>
-          </div>
-        </div>
+        <a class="navbar-item" href="{{ site.baseurl }}docs/getting-started/installation">Documentation</a>
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">Community</a>
           <div class="navbar-dropdown is-boxed">
