--- a/site/_includes/sidebar.html
+++ b/site/_includes/sidebar.html
@@ -15,5 +15,9 @@
     {% endfor %}
   </ul>
   {% endfor %}
+  <hr />
+  <a class="button is-info">
+    Latest version: {{ site.latest }}
+  </a>
 </aside>
 {% endunless %}
