--- a/site/_layouts/docs.html
+++ b/site/_layouts/docs.html
@@ -2,57 +2,59 @@
 layout: default
 ---
 
-<div class="container bk-docs-container">
-  <div class="columns">
-    <div class="column is-2">
-      {% include sidebar.html %}
-    </div>
-
-    <div class="column is-8 bk-docs-block">
-      <header class="docs-title">
-        <nav class="level">
-          <div class="level-left">
-            <div class="level-item">
-              <h1 class="title">{{ page.title }}</h1>
-            </div>
-          </div>
-          {% if page.logo %}
-          <div class="level-right">
-            <div class="level-item">
-              <img class="logo" src="{{ site.baseurl }}{{ page.logo }}">
-            </div>
-          </div>
-          {% endif %}
-        </nav>
-
-        {% if page.subtitle %}<h2 class="subtitle">{{ page.subtitle }}</h2>{% endif %}
-      </header>
-
-      <hr />
-
-      <div class="content is-medium">
-        <section class="bk-docs-content">
-          {{ content }}
-        </section>
-
-        {% if page.next or page.prev %}
-        <nav class="pagination is-centered">
-          {% if page.prev %}
-          <a class="pagination-previous" href="{{ page.prev }}">Previous</a>
-          {% endif %}
-          {% if page.next %}
-          <a class="pagination-next" href="{{ page.next }}">Next</a>
-          {% endif %}
-          <ul class="pagination-list"></ul>
-        </nav>
-        {% endif %}
+<div class="bk-docs-container">
+  <div class="container">
+    <div class="columns">
+      <div class="column is-2">
+        {% include sidebar.html %}
       </div>
-    </div>
 
-    <div class="column is-2">
-      {% unless page.toc_disable %}
-      {% include table-of-contents.html %}
-      {% endunless %}
+      <div class="column is-8 bk-docs-block">
+        <header class="docs-title">
+          <nav class="level">
+            <div class="level-left">
+              <div class="level-item">
+                <h1 class="title">{{ page.title }}</h1>
+              </div>
+            </div>
+            {% if page.logo %}
+            <div class="level-right">
+              <div class="level-item">
+                <img class="logo" src="{{ site.baseurl }}{{ page.logo }}">
+              </div>
+            </div>
+            {% endif %}
+          </nav>
+
+          {% if page.subtitle %}<h2 class="subtitle">{{ page.subtitle }}</h2>{% endif %}
+        </header>
+
+        <hr />
+
+        <div class="content is-medium">
+          <section class="bk-docs-content">
+            {{ content }}
+          </section>
+
+          {% if page.next or page.prev %}
+          <nav class="pagination is-centered">
+            {% if page.prev %}
+            <a class="pagination-previous" href="{{ page.prev }}">Previous</a>
+            {% endif %}
+            {% if page.next %}
+            <a class="pagination-next" href="{{ page.next }}">Next</a>
+            {% endif %}
+            <ul class="pagination-list"></ul>
+          </nav>
+          {% endif %}
+        </div>
+      </div>
+
+      <div class="column is-2">
+        {% unless page.toc_disable %}
+        {% include table-of-contents.html %}
+        {% endunless %}
+      </div>
     </div>
   </div>
 </div>
