one last color change

--- a/site/_sass/_variables.sass
+++ b/site/_sass/_variables.sass
@@ -9,7 +9,7 @@ $em-right-margin: 0.2rem
 
 // Bulma variables
 $tan: #c88e56
-$blue: #42a5f5
+$blue: #1976d2
 $primary: $tan
 
 $family-sans-serif: 'Lato', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
